--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "@mui/styled-engine": "^5.8.7",
+    "@mui/styled-engine-sc": "^5.8.0",
     "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
@@ -42,6 +43,7 @@
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "styled-components": "^5.3.5",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
